# code-reviewer

./: .env.example  .gitignore  pyproject.toml  run_review.py
cli/: main.py
datasets/examples/: bad_example.py  good_example.py  sql_injection.py
reviewer_core/: __init__.py  models.py  orchestrator.py
reviewer_core/llm/: __init__.py  gemini_client.py  prompts.py
reviewer_core/parsing/: __init__.py  python_queries.scm  ts_loader.py
reviewer_core/security/: __init__.py  patterns.py  runner.py  taint.py
reviewer_core/static_analysis/: __init__.py  complexity.py  runner.py  style_rules.py
tests/: test_end_to_end.py  test_security.py  test_static.py
vscode-extension/: package.json
vscode-extension/media/: panel.js  styles.css
vscode-extension/src/: extension.ts
